Karavan in Docker for #817